--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 
 body {
   font-family: var(--lato);
-  background-color: var(--gelo);
+  background-color: var(--branco);
 }
 
 .container {
@@ -217,6 +217,7 @@ header nav a {
 footer {
   padding: 2% 0;
   color: var(--vermelho-forte);
+  background-color: var(--gelo);
 }
 
 footer h1 {
